--- a/banquetBuddy/catering_owners/templates/list_plates.html
+++ b/banquetBuddy/catering_owners/templates/list_plates.html
@@ -82,7 +82,7 @@
             <div class="col-md-2">
                 <a href="{% url 'add_plate' %}" class="text-decoration-none">
                     <button class="btn btn-add btn-block small-font">
-                        <i class="bi bi-plus-circle"></i> Add New Plate
+                        <i class="bi bi-plus-circle"></i> Add Plate
                     </button>
                 </a>
             </div>
