--- a/banquetBuddy/catering_owners/templates/contact_chat_owner.html
+++ b/banquetBuddy/catering_owners/templates/contact_chat_owner.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container mt-4">
-  <h1 class="mb-4 text-center">Chats</h1>
-  <hr />
+  <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+    Chats</h2>
   {% if is_catering_company %}
 
     <div class="row">
@@ -11,10 +11,10 @@
       <div class="col-md-6">
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title">{{ message.sender.username }}</h5>
+            <h4 class="card-title">{{ message.sender.username }}</h4>
             <p><strong>Nombre:</strong> {{ message.sender.first_name }} {{ message.sender.last_name }}<p>
             <p class="card-text"><strong>Phone number:</strong> {{ message.sender.email }}</p>
-            <a href="{% url 'chat' message.sender.id %}"><button class="btn btn-primary">Chat</button></a>
+            <a href="{% url 'chat' message.sender.id %}"><button class="btn btn-custom">Chat</button></a>
           </div>
         </div>
       </div>
