--- a/banquetBuddy/catering_owners/templates/delete_service.html
+++ b/banquetBuddy/catering_owners/templates/delete_service.html
@@ -2,28 +2,15 @@
 
 {% block content %}
 <style>
-
-    .row {
-        text-align: center;
-    }
-    .text {
-        text-align: center;
-        margin-top: 4%;
-        margin-bottom: 7%
-    }
-
-    .butYes {
+    .btn-danger {
         text-align: center;
         display: block;
         width: 40%;
         padding: 0.5%;
-        color: white;
         border: none;
         cursor: pointer;
         margin-left: 30%;
-        margin-bottom: 2%;
-        background-color: #cb3234
-
+        margin-bottom: 1%;
     }
 
     .butNo {
@@ -35,15 +22,20 @@
         border: none;
         cursor: pointer;
         margin-left: 30%;
-        background-color: #02483E
+        background-color: #02483E;
+    }
+
+    .butNo:hover {
+        background-color: #01352e;
+        color: white;
     }
 </style>
-<h1 style="text-align: center;">Confirm</h1>
-<h3 style="text-align: center;">Are you sure that you want to delete this service?"{{ service.name }}"?</h3>
+<h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+    Confirm</h2>
+<h3 style="text-align: center; color: #02483E;">Are you sure that you want to delete "{{ service.name }}" service?</h3>
     <form action="{% url 'confirm_delete_service' service.id %}" method="post">
         {% csrf_token %}
-        <input class="butYes" type="submit" href="{% url 'confirm_delete_service' service.id %}" value="Yes, delete">
+        <input class="btn btn-danger" type="submit" href="{% url 'confirm_delete_service' service.id %}" value="Yes, delete">
     </form>
-
     <button class="butNo" onclick="window.location.href='{% url 'services' %}'">Cancel</button>
 {% endblock %}
