--- a/banquetBuddy/catering_owners/templates/payment/canceled.html
+++ b/banquetBuddy/catering_owners/templates/payment/canceled.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-<div class="card">
-    <h1>Ha habido un fallo en la compra</h1>
-    <p>¡Vuelve a intentarlo!</p>
+<div>
+    <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+        There has been a failure in the purchase</h2>
+    <p style="text-align: center; color: #02483E;">Try again!</p>
 
-    <!-- Puedes personalizar el enlace a la página de inicio -->
-    <a href="/" class="btn btn-primary boton-inicio">Ir al Inicio</a>
+    <div class="text-center">
+        <a href="/" class="btn btn-custom">Back to Home</a>
+    </div>
 </div>
 
 {% endblock %}
