fix: Updated cancel purchase message

--- a/banquetBuddy/catering_owners/templates/payment/canceled.html
+++ b/banquetBuddy/catering_owners/templates/payment/canceled.html
@@ -3,8 +3,7 @@
 {% block content %}
 
 <div class="card">
-    <h1>Ha habido un fallo en la compra</h1>
-    <p>¡Vuelve a intentarlo!</p>
+    <h1>The purchasing process has been canceled.</h1>
 
     <!-- Puedes personalizar el enlace a la página de inicio -->
     <a href="/" class="btn btn-primary boton-inicio">Ir al Inicio</a>
