feat: Improve employee styles

--- a/banquetBuddy/catering_employees/templates/error_employee_already_applied.html
+++ b/banquetBuddy/catering_employees/templates/error_employee_already_applied.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Error de permisos</h1>
+    <h1>Permissions Error</h1>
     
     <p>You have already applied for this offer or you are already hired</p>
     
