--- a/banquetBuddy/catering_employees/templates/error_employee_curriculum.html
+++ b/banquetBuddy/catering_employees/templates/error_employee_curriculum.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Curriculum error</title>
+<title>Error</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -43,9 +43,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Curriculum error</h1>
-        <p>Necesitas agregar un curriculum para poder aplicar a la oferta de trabajo seleccionada</p>
-        <button onclick="window.location.href='/profilex-edit'" class="button-appearance">Agregar curriculum</button>
+        <h1>Curriculum Error</h1>
+        <p>You need to add a curriculum to be able to apply for the selected job offer</p>
+        <button onclick="window.location.href='/profilex-edit'" class="button-appearance">Add Curriculum</button>
     </div>
 </body>
 </html>
