--- a/banquetBuddy/catering_owners/templates/error.html
+++ b/banquetBuddy/catering_owners/templates/error.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-    <h1>Error de permisos</h1>
+    <h1>Permissions Error</h1>
     
-    <p>No tienes permisos para acceder a esta oferta.</p>
+    <p>You do not have permissions to access this offer</p>
     
 </body>
 </html>
