--- a/banquetBuddy/core/templates/core/home.html
+++ b/banquetBuddy/core/templates/core/home.html
@@ -42,10 +42,10 @@
   <form method="post" action="{% url 'employeeOfferList' %}" id="miFormulario" class="mb-4">
     {% csrf_token %}
     <div class="input-group">
-      <input type="text" class="form-control bg-light border-0 small" placeholder="Search..." id="search" name="search"
+      <input type="text" class="form-control bg-light border-0 small" placeholder="Search offer by name..." id="search" name="search"
         value="{{ search }}" />
       <div class="input-group-append">
-        <button class="btn btn-primary  mb-3" type="submit">
+        <button class="btn btn-custom  mb-3" type="submit">
           <i class="fa fa-search" aria-hidden="true"></i>
         </button>
       </div>
