--- a/banquetBuddy/core/templates/core/profile.html
+++ b/banquetBuddy/core/templates/core/profile.html
@@ -27,11 +27,11 @@
             </li>
             {% if user.EmployeeUsername %}
             <li class="list-group-item">
-              <strong>Currículum:</strong>
+              <strong>Curriculum:</strong>
               {% if user.EmployeeUsername.curriculum %}
               <a href="{{ user.EmployeeUsername.curriculum.url }}" target="_blank">{{ user.EmployeeUsername.curriculum.name }}</a>
               {% else %}
-              No hay currículum adjunto
+              There is no CV attached
               {% endif %}
             </li>
             {% endif %}
@@ -66,7 +66,7 @@
                   <a href="{{ catering_company.verification_document.url }}" target="_blank">
                   {{ catering_company.verification_document.name }}</a>
                   {% else %}
-                  There is no associated verification document.
+                  There is no associated verification document
                   {% endif %}
                 </li>
                 <li class="list-group-item">
@@ -96,14 +96,14 @@
       <div class="row justify-content-center">
         <a href="{% url 'profile_edit' %}" class="text-decoration-none mr-2">
           <button class="btn btn-custom-blue">
-            Edit profile
+            Edit Profile
           </button>
         </a>
 
         {% if request.user.EmployeeUsername %}
         <a href="{% url 'my_recommendation_letters' user.id %}" class="text-decoration-none ml-2">
-          <button class="btn btn-rounded text-white" style="background-color: #54bfaf;">
-            Recommendation letters
+          <button class="btn btn-custom-blue">
+            Recommendation Letters
           </button>
         </a>
         {% endif %}
