--- a/banquetBuddy/core/templates/core/registro_empleado.html
+++ b/banquetBuddy/core/templates/core/registro_empleado.html
@@ -89,7 +89,7 @@
               {% for field in employee_form %}
               <div class="form-group">
                 {% if field.html_name == 'curriculum' %}
-                <label for="{{ field.html_name }}">Currículum:</label>
+                <label for="{{ field.html_name }}">Curriculum:</label>
                 {% endif %}
                 <input
                   type="{{ field.field.widget.input_type }}"
