--- a/banquetBuddy/catering_owners/templates/error_catering.html
+++ b/banquetBuddy/catering_owners/templates/error_catering.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Error de permisos</h1>
+    <h1>Permissions Error</h1>
     
     <p>You are not registered as a catering owner</p>
     
