--- a/banquetBuddy/catering_owners/templates/registro_company.html
+++ b/banquetBuddy/catering_owners/templates/registro_company.html
@@ -1,15 +1,9 @@
 {% extends 'core/base.html' %}
 {% block content %}
 {% load static %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Catering Register</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  </head>
   <body>
     <div class="container mt-4 mb-4">
-      <div class="row d-flex align-items-center justify-content-center" style="height: 80vh">
+      <div class="row d-flex align-items-center justify-content-center">
         <div class="col-md-7 mx-auto">
           <div class="register-form">
             <h2 class="register-heading"><u>Sign Up</u></h2>
@@ -101,8 +95,7 @@
     </div>
   </body>
   <style>
-    body,
-    html {
+    body {
       height: 100%;
       margin: 0;
     }
@@ -150,5 +143,4 @@
       font-size: 12px;
     }
   </style>
-</html>
 {% endblock %}
