--- a/banquetBuddy/core/templates/core/registro_empleado.html
+++ b/banquetBuddy/core/templates/core/registro_empleado.html
@@ -1,12 +1,6 @@
 {% extends 'core/base.html' %} {% block content %}
 
 <style>
-  body,
-  html {
-    height: 100%;
-    margin: 0;
-  }
-
   .register-form {
     background-color: #54BFAF;
     padding: 20px;
@@ -52,7 +46,7 @@
 </style>
 
 <div class="container mt-4 mb-4">
-  <div class="row d-flex align-items-center justify-content-center" style="height: 80vh">
+  <div class="row d-flex align-items-center justify-content-center">
     <div class="col-md-7 mx-auto">
       <div class="register-form">
         <h2 class="register-heading"><u>Sign Up</u></h2>
