--- a/banquetBuddy/core/templates/core/registro_particular.html
+++ b/banquetBuddy/core/templates/core/registro_particular.html
@@ -1,13 +1,4 @@
 {% extends 'core/base.html' %} {% block content %} {% load static %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Particular Register</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
-  </head>
   <style>
     body,
     html {
@@ -61,9 +52,7 @@
   <body>
     <div class="container mt-4 mb-4">
       <div
-        class="row d-flex align-items-center justify-content-center"
-        style="height: 80vh"
-      >
+        class="row d-flex align-items-center justify-content-center">
         <div class="col-md-7 mx-auto">
           <div class="register-form">
             <h2 class="register-heading"><u>Sign Up</u></h2>
@@ -122,5 +111,4 @@
       </div>
     </div>
   </body>
-</html>
 {% endblock %}
