hotfix: Experience field on profile

--- a/banquetBuddy/core/templates/core/profile.html
+++ b/banquetBuddy/core/templates/core/profile.html
@@ -29,7 +29,7 @@
               <strong>Profession:</strong> {{ user.EmployeeUsername.profession }}
             </li>
             <li class="list-group-item">
-              <strong>Profession:</strong> {{ user.EmployeeUsername.experience }}
+              <strong>Experience:</strong> {{ user.EmployeeUsername.experience }}
             </li>
             {% if user.EmployeeUsername %}
             <li class="list-group-item">
