--- a/banquetBuddy/catering_employees/templates/my_recommendation_letters.html
+++ b/banquetBuddy/catering_employees/templates/my_recommendation_letters.html
@@ -4,6 +4,9 @@
 <div class="container mt-4">
     <h1 class="mb-4">Your Recommendations</h1>
     <div class="row row-cols-1 row-cols-md-3 g-4">
+        {% if not recomendation_dict %}
+            <h5 style="margin-left: 3%;">You have no recommendations yet</h5>
+        {% endif %}
         {% for recommendation, catering_company in recommendation_dict.items %}
         <div class="col mb-4">
             <div class="card h-100 shadow-sm">
