--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -45,6 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/caterings">Caterings</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/subscription-plans">Plan</a>
+                        </li>
                     {% endif %}
 
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
