--- a/banquetBuddy/catering_particular/templates/catering_review.html
+++ b/banquetBuddy/catering_particular/templates/catering_review.html
@@ -13,12 +13,12 @@
         {% endif %}
 
         <div class="form-group">
-            <label for="description">Review Description:</label>
+            <label for="description" style="color: #02483E;">Description:</label>
             <input type="text" name="description" class="form-control {% if form_error %}is-invalid{% endif %}" required>
         </div>
 
         <div class="form-group">
-            <p>Rating: <span class="star-rating">
+            <p style="color: #02483E;">Rating: <span class="star-rating">
                 <label for="rate-1" style="--i:1"><i class="fa-solid fa-star"></i></label>
                 <input type="radio" name="rating" id="rate-1" value="1">
                 <label for="rate-2" style="--i:2"><i class="fa-solid fa-star"></i></label>
