--- a/banquetBuddy/catering_employees/templates/contact_chat_employee.html
+++ b/banquetBuddy/catering_employees/templates/contact_chat_employee.html
@@ -22,11 +22,11 @@
       value="{{ search }}"
     />
     <div class="input-group-append">
-      <button class="btn btn-primary  mb-3" type="submit">
+      <button class="btn btn-custom  mb-3" type="submit">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
       <button class="btn btn-secondary mb-3" type="button" id="limpiarFiltros">
-        <i class="fa fa-times" aria-hidden="true"></i> Limpiar Filtros
+        <i class="fa fa-times" aria-hidden="true"></i> Clean Filter
       </button>
     </div>
   </div>
