--- a/banquetBuddy/catering_employees/templates/list_work_services.html
+++ b/banquetBuddy/catering_employees/templates/list_work_services.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             {% empty %}
-            <div style="margin-left: 285px;">
+            <div class="col-md-12">
                 <p class="mb-4 text-center small-font" style="color: #02483E; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">No jobs found</p>
             </div>
             {% endfor %}
