--- a/banquetBuddy/catering_owners/templates/employee_record.html
+++ b/banquetBuddy/catering_owners/templates/employee_record.html
@@ -1,41 +1,34 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catering Services for Employee</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .already-recommended {
-            color: orange;
-        }
-    </style>
-</head>
-<body>
+<style>
+    strong {
+        margin-right: 5px;
+        color: #02483E;
+    }
+</style>
+
     <div class="container">
-        <h1>Catering Services where {{ employee.user.username }} previously worked </h1>
-        <ul class="list-group">
+        <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+            Catering Services where {{ employee.user.username }} previously worked</h2>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
             {% for service in services_worked %}
-                <li class="list-group-item">
-                    <h3>{{ service.cateringservice.name }}</h3>
-                    <p>Description: {{ service.cateringservice.description }}</p>
-                    <p>Location: {{ service.cateringservice.location }}</p>
-                    <p>Start date: {{ service.start_date }} </p>
-                    <p>End date: {{ service.end_date }} </p>
-                </li>
+            <div class="col-md-12">
+                <div class="card rounded shadow">
+                    <div class="card-body">
+                        <h4 class="card-title">{{ service.cateringservice.name }}</h4>
+                        <p class="card-text"><strong>Description:</strong> {{ service.cateringservice.description }}</p>
+                        <p class="card-text"><strong>Location:</strong> {{ service.cateringservice.location }}</p>
+                        <p class="card-text"><strong>Start date:</strong> {{ service.start_date }}</p>
+                        <p class="card-text"><strong>End date:</strong> {{ service.end_date }}</p>
+                    </div>
+                </div>
+            </div>
             {% empty %}
-                <li class="list-group-item">No catering services found for this employee.</li>
+                <div class="col-md-12">
+                    <p class="mb-4 text-center small-font" style="color: #02483E; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">No catering services found for this employee</p>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
 {% endblock %}
-
