--- a/banquetBuddy/catering_particular/templates/listar_caterings.html
+++ b/banquetBuddy/catering_particular/templates/listar_caterings.html
@@ -188,7 +188,7 @@
           <a
             href="{% url 'catering_detail' catering.id %}"
             class="btn btn-custom"
-            >View details</a
+            >View Details</a
           >
         </div>
       </div>
