--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -124,12 +124,12 @@
             </div>
             {% if is_suscribed == TRUE %}
             <div class="plan-btn" style="margin-top:29% ;">
-                <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
+                <button type="button" href="" class="btn btn-danger"><a href="#"
                         class="text-decoration-none text-light">Cancelar subscripción</a></button>
             </div>
             {%else%}
             <div class="plan-btn" style="margin-top:29% ;">
-                <button type="button" href="" class="btn btn-dark"><a href="{% url 'process_premium' %}"
+                <button type="button" href="" class="btn btn-dark"><a href="#"
                         class="text-decoration-none text-light">Get ready</a></button>
             </div>
             {%endif %}
